--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz da FURIA</title>
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="..styles/reset.css">
+    <link rel="stylesheet" href="..styles/style.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
 
         <!-- Botão de Iniciar -->
         <div class="start">
-            <a href="/pages/chat.html">
+            <a href="../pages/chat.html">
                 <button id="start-button">Iniciar Quiz</button>
             </a>
         </div>
