--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <!-- Botão de Iniciar -->
         <div class="start">
-            <a href="/pages/chat.html">
+            <a href="../pages/chat.html">
                 <button id="start-button">Iniciar Quiz</button>
             </a>
         </div>
