--- a/pages/chat.html
+++ b/pages/chat.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz da FURIA</title>
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/chat.css">
+    <link rel="stylesheet" href="..styles/reset.css">
+    <link rel="stylesheet" href="..styles/chat.css">
 </head>
 
 <body>
     <div class="container">
         <!-- Logo da FURIA -->
         <div class="logo">
-            <img src="images/logo/furia-seeklogo.png" alt="Logo FURIA">
+            <img src="..images/logo/furia-seeklogo.png" alt="Logo FURIA">
         </div>
         <!-- Caixa de texto para o chat -->
         <div class="chat">
@@ -34,7 +34,7 @@
             <button id="send-button">Enviar</button>
         </div>
     </div>
-    <script src="scripts/chat.js"></script>
+    <script src="..scripts/chat.js"></script>
 </body>
 
 </html>
