--- a/pages/chat.html
+++ b/pages/chat.html
@@ -10,25 +10,18 @@
 </head>
 
 <body>
-    <div class="container">
-        <!-- Logo da FURIA -->
-        <div class="logo">
-            <img src="../images/logo/furia-seeklogo.png" alt="Logo FURIA">
-        </div>
-        <!-- Caixa de texto para o chat -->
-        <div class="chat">
+    <div class="chat-container">
+        <!-- Área principal do chat -->
+        <main class="chat-main">
             <div class="chat-box" id="chat-box">
-                <!-- Renderizar o Blip diretamente aqui -->
                 <script src="https://unpkg.com/blip-chat-widget"></script>
                 <script>
-                    
-                    localStorage.clear(); // Remove dados locais
-                    sessionStorage.clear(); // Remove dados da sessão
+                    localStorage.clear();
+                    sessionStorage.clear();
                     (function () {
                         new BlipChat()
                             .withAppKey('cXVpemZ1cmlhOjhkM2MxZTkyLWEzYjktNDM4Ny1iYjVlLTljNDQwYjkyZDFkYg==')
-                            .withTarget('chat-box') // Renderizar dentro da 'chat-box'
-                            /* Gera um ID único a cada carregamento */
+                            .withTarget('chat-box')
                             .withAccount({
                                 id: Math.random().toString(36).substr(2, 9)
                             })
@@ -36,6 +29,7 @@
                     })();
                 </script>
             </div>
+        </main>
     </div>
     <script src="../scripts/chat.js"></script>
 </body>
