--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
         <!-- Logo e Contexto -->
         <div class="intro">
             <img src="images/logo/furia-seeklogo.png" alt="Logo FURIA" class="logo">
-            <h1>Bem-vindo ao Quiz da FURIA!</h1>
-            <p>Desafie seus conhecimentos sobre o time e mostre que você é o fã número 1. Acumule pontos e desbloqueie
-                prêmios exclusivos!</p>
+            <h1>Bem-vindo ao Pantera Virtual!</h1>
+            <p>Desafie seus conhecimentos sobre o time e mostre que você é o fã número 1. Acumule pontos e desbloqueie prêmios exclusivos!</p>
         </div>
 
         <!-- Botão de Iniciar -->
