--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
         <div class="intro">
             <img src="images/logo/furia-seeklogo.png" alt="Logo FURIA" class="logo">
             <h1>Bem-vindo ao Pantera Virtual!</h1>
-            <p>Desafie seus conhecimentos sobre o time e mostre que você é o fã número 1. Acumule pontos e desbloqueie prêmios exclusivos!</p>
+            <p>Feito para os verdadeiros fãs que buscam estar sempre conectados ao time de CS da FURIA.</p>
         </div>
 
         <!-- Botão de Iniciar -->
         <div class="start">
             <a href="pages/chat.html">
-                <button id="start-button">Iniciar Quiz</button>
+                <button id="start-button">Web</button>
+            </a>
+            <a href="https://t.me/Panteravirtualbot">
+                <button id="start-button">Telegram</button>
             </a>
         </div>
     </div>
