--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
         <!-- Botão de Iniciar -->
         <div class="start">
             <a href="pages/chat.html">
-                <button id="start-button">Web</button>
-            </a>
-            <a href="https://t.me/Panteravirtualbot">
-                <button id="start-button">Telegram</button>
+                <button id="start-button">Iniciar</button>
             </a>
         </div>
     </div>
